# ai-media-production-os

./: .env.example  .gitattributes  .gitignore  Architecture Freeze Review.md  Blueprint for a multi-year initiative.md  Business Capabilities.md  DECISIONS.md  Domain Driven Design.md  Enterprise Knowledge Graph.md  GitHub Issues - Full MVP (Superseded).md  GitHub Issues - Tasks 01-25.md  GitHub Issues - Visual MVP.md  GitHub Issues.md  LICENSE  MULTI-SCENE-SCR.md  MVP Backlog.md  MVP Definition.md  MVP Dependency Map.md  MVP Scope Freeze.md  Makefile  Multi-Agent Architecture.md  OPS-02-GPU-BURST-PILOT.md  PHASE-3A-MISSION-CLOSURE.md  PHASE-3B-MISSION-CLOSURE.md  PHASE-3C-MISSION-CLOSURE.md  PHASE-3D-MISSION-CLOSURE.md  PHASE-4-MULTI-SCENE-CLOSURE.md  PHASE-4-PREPARATION-CLOSURE.md  PHASE-5-AUDIO-NARRATION-CLOSURE.md  PHASE-6-EPISODE-CLOSURE.md  PHASE-7-CHARACTER-BIBLE-CLOSURE.md  PHASE-7.5-CHARACTER-HARDENING-CLOSURE.md  PHASE-8-CONSOLIDATION-CLOSURE.md  PHASE-8-GOVERNANCE-BRIEF.md  PHASE-NEXT-RECOMMENDATION.md  PLATFORM-MATURITY-ASSESSMENT-V2.md  README.md  RELEASE-READINESS-RECOMMENDATION.md  RELEASE-READINESS-REPORT.md  ROADMAP-RECOMMENDATION.md  (+23 more)
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_core_tables.py  0002_asset_version_metadata_json.py  0003_storyboard_multi_frame_version.py  0004_multi_scene_pilot.py  0005_episode_model_pilot.py  0006_character_bible_pilot.py  0007_character_snapshot.py
api/app/: __init__.py  dependencies.py  main.py
api/app/domain/: __init__.py
api/app/infrastructure/: __init__.py
api/app/middleware/: __init__.py  auth.py  logging.py  request_id.py
api/app/routes/: __init__.py  assets.py  audit.py  characters.py  episodes.py  export.py  health.py  ideas.py  lineage.py  pipeline.py  pipeline_ws.py  projects.py
api/app/seed/: __init__.py  default_project.py
api/tests/: conftest.py
api/tests/integration/: conftest.py  test_asset_upload.py  test_repositories.py
api/tests/unit/: test_asset_content.py  test_asset_history.py  test_assets_route.py  test_assets_us13.py  test_assets_us15.py  test_assets_us17.py  test_assets_us18.py  test_audit_export.py  test_audit_trail.py  test_auth.py  test_character_export.py  test_character_service.py  test_character_snapshot_export.py  test_cors.py  test_episode_export.py  test_episode_service.py  test_export.py  test_health.py  test_ideas_route.py  test_ideas_service.py  test_lineage.py  test_middleware.py  test_models_importable.py  test_multi_scene_export.py  test_narration_export.py  test_pipeline_approve.py  test_pipeline_regenerate.py  test_pipeline_route.py  test_pipeline_runs.py  test_pipeline_start.py  test_pipeline_status_mapper.py  test_pipeline_ws.py  test_project_repository.py  test_projects_route.py  test_store_asset.py
worker/: Dockerfile  README.md  pyproject.toml
worker/app/: __init__.py  main.py
worker/app/agents/: __init__.py
worker/app/infrastructure/: pipeline_publish.py
worker/app/temporal/: __init__.py
worker/app/tools/: __init__.py  assets.py  (+7 more)
(+957 files in other folders)
