[project]
name = "aimpos-api"
version = "0.1.0"
description = "AIMPOS-Spark Visual — FastAPI monolith (REST surface, domain, infrastructure)."
requires-python = ">=3.11"

# Major versions pinned per coding-standards.md §213-219. Patch ranges left
# open so security fixes are picked up; majors bounded to prevent silent breaks.
dependencies = [
    "aimpos-core",
    "aimpos-config",
    "fastapi>=0.115,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "minio>=7.2,<8.0",
    "temporalio>=1.8,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# aimpos-core / aimpos-config are consumed as editable local packages in
# development; the compose/CI image installs them from packages/*.
[tool.uv.sources]
aimpos-core = { path = "../packages/aimpos-core", editable = true }
aimpos-config = { path = "../packages/aimpos-config", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's parameter helpers are called in argument defaults by design; treat
# them as immutable so B008 doesn't flag the standard dependency-injection idiom.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.11"
# Pragmatic outside packages/ per coding-standards.md §71; persistence layer
# uses SQLAlchemy's typed mapped_column so we keep checks meaningful.
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live compose MinIO + PostgreSQL (set AIMPOS_RUN_INTEGRATION=1)",
]
