[project]
name = "aimpos-worker"
version = "0.1.0"
description = "AIMPOS-Spark Visual — Temporal worker stub (workflows land in US-07)."
requires-python = ">=3.11"
dependencies = [
    "aimpos-core",
    "aimpos-config",
    "temporalio>=1.8,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "langgraph>=0.2,<1.0",
    "httpx>=0.27,<1.0",
    "minio>=7.2,<8.0",
    "pyyaml>=6,<7",
    "redis>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
